# neural-networks

./: .gitignore  CMakeLists.txt  benchmark.py
common/: AbstractFeedforwardNeuralNetworkFactory.h  CMakeLists.txt  FeedforwardNeuralNetwork.cpp  FeedforwardNeuralNetwork.h  FeedforwardNeuralNetworkClassFactory.h  ManagedMatrix.h  TrainResult.h  TrainSettings.h  data-util.cpp  data-util.h  int-util.cpp  int-util.h  runner-common.cpp  runner-common.h  util.cpp  util.h
cuda/: CMakeLists.txt
cuda/neural-networks/: CMakeLists.txt  CudaFeedforwardNeuralNetwork.cpp  CudaFeedforwardNeuralNetwork.h  cuda-helpers.cu  cuda-helpers.h
cuda/runner/: CMakeLists.txt  main.cpp
cuda/test/: CMakeLists.txt  main.cpp
opencl/: CMakeLists.txt
opencl/neural-networks/: CMakeLists.txt  OpenclFeedforwardNeuralNetwork.cpp  OpenclFeedforwardNeuralNetwork.h  OpenclNeuralNetworkHelper.cpp  OpenclNeuralNetworkHelper.h  kernels.cl
opencl/runner/: CMakeLists.txt  main.cpp
opencl/test/: CMakeLists.txt  main.cpp
openmp/: CMakeLists.txt
openmp/neural-networks/: CMakeLists.txt  OpenmpFeedforwardNeuralNetwork.cpp  OpenmpFeedforwardNeuralNetwork.h  eigen-util.h
openmp/runner/: CMakeLists.txt  main.cpp
openmp/test/: CMakeLists.txt  main.cpp
openmpi/: CMakeLists.txt
openmpi/neural-networks/: .gitignore  CMakeLists.txt  OpenmpiFeedforwardNeuralNetwork.cpp  OpenmpiFeedforwardNeuralNetwork.h  eigen-util.cpp  serialization.h
openmpi/runner/: CMakeLists.txt  main.cpp
test-common/: ApproxMatrixMatcher.cpp  ApproxMatrixMatcher.h  CMakeLists.txt  nn-test.cpp  nn-test.h
